@@ -2,8 +2,8 @@ v1.1
 	use plchanges (pl id?) to keep track of the playlist (faster?)
 	speed up sorting by manipulating self.songs, self.currentdata appropriately?
 	VA albums
-	--keys to list all keybindings
 	remove egg code... :(
+	backup icons for volume - http://pygtk.org/docs/pygtk/class-gtkimage.html#method-gtkimage--set-from-file
 
 v1.2
 	switching between user profiles?
